[package]
name = "afec-gui"
version = "0.1.0"
description = "A Tauri App"
authors = ["emuell"]
license = "GPL v3"
repository = ""
default-run = "afec-gui"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]

# common
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
string-error = "^0.1"
log = { version = "^0.4", features = ["max_level_debug", "release_max_level_info"] }
simplelog = { version = "^0.12" }
crossbeam-channel = { version = "0.5" }

#tauri
# NB: set features = ["api-all", "devtools"] to enable dev tools in release builds 
tauri = { version = "^1.0", features = ["api-all"] }
tauri-plugin-window-state = { version = "^0.1" }
tauri-plugin-sqlite = { git = "https://github.com/lzdyes/tauri-plugin-sqlite", tag = "v0.1.1" }

# audio
audio_thread_priority = { version = "^0.26", default-features = false, features = ["winapi"] }
cpal = { version = "^0.14" }
# OR: cubeb = { git = "https://github.com/mozilla/cubeb-rs" }
symphonia = { version = "^0.5", features = [ "aac", "alac", "mp3", "isomp4" ] }
libsamplerate = { version = "^0.1" }
rb = { version = "^0.4" }

# tsne
sqlite = "^0.26"
bhtsne = "^0.5"
rstats = "^1.2"

[features]
# by default Tauri runs in production mode when `tauri dev` runs it is executed with 
# `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
