[package]
name = "afec-explorer"
version = "0.1.0"
description = "Experimental GUI for browsing AFEC high-level databases"
authors = ["emuell"]
license = "GPL v3"
repository = ""
default-run = "afec-explorer"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "^1.4", features = [] }

[dependencies]

# common
static_assertions = { version = "^1.1" }
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
log = { version = "^0.4", features = ["max_level_debug", "release_max_level_info"] }
simplelog = { version = "^0.12" }
crossbeam-channel = { version = "0.5" }
anyhow = { version = "1.0" }

#tauri
# NB: set features = ["api-all", "devtools"] to enable dev tools in release builds 
tauri = { version = "^1.4", features = ["api-all"] }
tauri-plugin-window-state = { version = "^0.1" }
tauri-plugin-sqlite = { git = "https://github.com/lzdyes/tauri-plugin-sqlite", tag = "v0.1.1" }

# audio
afplay = { path = "../../Crates/afplay" }
afwaveplot = { path = "../../Crates/afwaveplot" }
# afplay = { git = "https://github.com/emuell/afplay" }
# afwaveplot = { git = "https://github.com/emuell/afwaveplot" }

# tsne
sqlite = "^0.26"
bhtsne = "^0.5"
rstats = "1.2.16"

[features]
# by default Tauri runs in production mode when `tauri dev` runs it is executed with 
# `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
